--- a/packages/mold/package.json
+++ b/packages/mold/package.json
@@ -10,6 +10,11 @@
 	"author": "ChaosLee <chaos2lee@qq.com>",
 	"homepage": "https://github.com/produck/mold/tree/main/packages/mold#readme",
 	"license": "MIT",
+	"type": "module",
+	"exports": {
+		"import": "./dist/mold.mjs",
+		"require": "./dist/mold.cjs"
+	},
 	"main": "index.js",
 	"repository": {
 		"type": "git",
