workspace: [FIXED] mold-example-cjs, mold-example-mjs

--- a/example/cjs/package.json
+++ b/example/cjs/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mold-example",
+	"name": "mold-example-cjs",
 	"version": "1.0.1",
 	"description": "> TODO: description",
 	"author": "ChaosLee <chaos2lee@qq.com>",
