--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Using to generate normalize function.",
 	"main": "index.js",
 	"scripts": {
+		"deps:install": "npm i && lerna bootstrap",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -22,7 +23,7 @@
 	},
 	"homepage": "https://github.com/produck/mold#readme",
 	"devDependencies": {
-		"eslint": "^8.23.0",
-		"lerna": "^5.4.3"
+		"eslint": "^8.23.1",
+		"lerna": "^5.5.1"
 	}
 }
