--- a/packages/mold/package.json
+++ b/packages/mold/package.json
@@ -42,5 +42,6 @@
 		"c8": "^7.12.0",
 		"mocha": "^10.0.0",
 		"rollup": "^2.79.0"
-	}
+	},
+	"gitHead": "3bcaf1961b39839e9faa7d92bd4d550b4bc86d1a"
 }
