--- a/packages/mold/package.json
+++ b/packages/mold/package.json
@@ -32,14 +32,17 @@
 	},
 	"scripts": {
 		"build": "rollup -c script/rollup.config.mjs",
-		"prepublishOnly": "npm run build",
-		"test": "mocha"
+		"lint": "eslint --fix **/*.mjs",
+		"test": "mocha \"**/*-spec.mjs\" -t 999999999 ",
+		"coverage": "c8 --reporter=lcov npm test",
+		"prepublishOnly": "npm run lint && npm test && npm run build"
 	},
 	"bugs": {
 		"url": "https://github.com/produck/mold/issues"
 	},
 	"devDependencies": {
 		"c8": "^7.12.0",
+		"eslint": "^8.23.1",
 		"mocha": "^10.0.0",
 		"rollup": "^2.79.0"
 	},
