--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "Using to generate normalize function.",
 	"main": "index.js",
 	"scripts": {
-		"deps:install": "npm i && lerna bootstrap",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"deps:install": "npm i && lerna bootstrap"
 	},
 	"repository": {
 		"type": "git",
