--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Using to generate normalize function.",
 	"main": "index.js",
 	"scripts": {
-		"deps:install": "npm i && lerna bootstrap"
+		"deps:install": "npm -v && npm i && lerna bootstrap",
+		"deps:clean": "lerna clean -y"
 	},
 	"repository": {
 		"type": "git",
@@ -22,7 +23,7 @@
 	},
 	"homepage": "https://github.com/produck/mold#readme",
 	"devDependencies": {
-		"eslint": "^8.23.1",
-		"lerna": "^5.5.1"
+		"eslint": "^8.24.0",
+		"lerna": "^5.5.4"
 	}
 }
