workspace: [FIXED] CI

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,10 @@
 name: Node.js CI
 
 on:
+  workflow_dispatch:
   push:
     tags:
-      - "@produck/mold@**"
+      - '@produck/mold@**'
 
 jobs:
   build:
