--- a/lerna.json
+++ b/lerna.json
@@ -4,14 +4,7 @@
 	"useWorkspaces": false,
 	"version": "independent",
 	"packages": [
-		"packages/mold",
-		"example/cjs",
-		"example/mjs",
-		"example/ts"
-	],
-	"command": {
-		"publish": {
-			"ignoreChanges": "mold-example-*"
-		}
-	}
+		"packages/*",
+		"example/*"
+	]
 }
