--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         cache: 'npm'
 
     - name: Install npm dependencies
-      run: npm run deps:install
+      run: npm run deps:ci-install
 
     - name: Run tests
       run: npx lerna run coverage
