--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
 		"deps:install": "npm -v && npm i && lerna bootstrap",
 		"deps:clean": "lerna clean -y",
 		"deps:ci-install": "npm i && lerna bootstrap --no-private",
-		"publish": "lerna publish --no-private"
+		"lint": "eslint --fix packages/**/*.mjs",
+		"test": "mocha \"packages/**/*-spec.mjs\" -t 999999999 ",
+		"coverage": "c8 --reporter=lcov npm run test",
+		"publish": "npm run lint && lerna publish --no-private"
 	},
 	"devDependencies": {
+		"c8": "^7.12.0",
+		"eslint": "^8.24.0",
+		"mocha": "^10.0.0",
 		"lerna": "^5.5.4"
 	}
 }
