--- a/packages/mold/package.json
+++ b/packages/mold/package.json
@@ -32,19 +32,12 @@
 	},
 	"scripts": {
 		"build": "rollup -c script/rollup.config.mjs",
-		"lint": "eslint --fix **/*.mjs",
-		"test": "mocha \"**/*-spec.mjs\" -t 999999999 ",
-		"coverage": "c8 --reporter=lcov npm test",
-		"prepublishOnly": "npm run lint && npm test && npm run build"
+		"prepublishOnly": "npm run build"
 	},
 	"bugs": {
 		"url": "https://github.com/produck/mold/issues"
 	},
 	"devDependencies": {
-		"c8": "^7.12.0",
-		"eslint": "^8.24.0",
-		"mocha": "^10.0.0",
 		"rollup": "^2.79.1"
-	},
-	"gitHead": "3bcaf1961b39839e9faa7d92bd4d550b4bc86d1a"
+	}
 }
