--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@produck/mold-packages",
+	"name": "@produck/mold-workspace",
 	"private": true,
 	"scripts": {
 		"deps:install": "npm -v && npm i && lerna bootstrap",
@@ -12,8 +12,12 @@
 	},
 	"devDependencies": {
 		"c8": "^7.12.0",
-		"eslint": "^8.24.0",
-		"mocha": "^10.0.0",
-		"lerna": "^5.5.4"
-	}
+		"eslint": "^8.27.0",
+		"mocha": "^10.1.0",
+		"lerna": "^6.0.3"
+	},
+	"workspaces": [
+		"packages/*",
+		"example/*"
+	]
 }
