--- a/packages/mold/package.json
+++ b/packages/mold/package.json
@@ -12,7 +12,6 @@
 	"license": "MIT",
 	"types": "types/index.d.js",
 	"files": [
-		"dist/mold.cjs",
 		"src",
 		"types",
 		"tsconfig.json"
@@ -20,11 +19,11 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"main": "dist/mold.cjs",
+	"main": "./src/index.cjs",
 	"type": "module",
 	"exports": {
 		"import": "./src/index.mjs",
-		"require": "./dist/mold.cjs"
+		"require": "./src/index.cjs"
 	},
 	"repository": {
 		"type": "git",
