--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
 	},
 	"devDependencies": {
 		"c8": "^7.12.0",
-		"eslint": "^8.28.0",
-		"mocha": "^10.1.0",
-		"lerna": "^6.0.3"
+		"eslint": "^8.32.0",
+		"mocha": "^10.2.0",
+		"lerna": "^6.4.1"
 	},
 	"workspaces": [
-		"packages/*",
-		"example/*"
+		"packages/*"
 	]
 }
